Fixed drawer icon and separator alignment

--- a/public_html/styles/navigation.less
+++ b/public_html/styles/navigation.less
@@ -34,9 +34,9 @@ ul.cellRowGroup {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    li {
-        display: inline-block;
-    }
+}
+nav ul li {
+    display: inline-block;
 }
 
 
@@ -492,7 +492,6 @@ li.cellRow.resetFilters {
 li.cellRow.contactItem a {
     .cellIcon svg {
         fill: white;
-        padding-top: 1px;
     }
     .cellIcon#contactIcon_snapchat {
         border: @lineThickness solid @colorLine;
